--- a/Atividades/MemoryGame2/index.html
+++ b/Atividades/MemoryGame2/index.html
@@ -242,6 +242,7 @@
         let lockBoard = false;
         let matchedPairs = 0;
         let totalPairs = 0;
+        let alertDisplayed = false; // Variável global para rastrear se a mensagem já foi exibida
 
 function getParamsFromURL() {
     const params = new URLSearchParams(window.location.search);
@@ -541,24 +542,19 @@ function speakText(text) {
     // Cancela qualquer síntese anterior
     synth.cancel();
 
-    // Variável para controlar o alerta
-    let alertDisplayed = false;
-
     // Função para verificar vozes e realizar a leitura
     const readText = () => {
         const voices = synth.getVoices();
         let voice = voices.find(v => v.lang === 'en-US');
 
         // Caso não encontre a voz "en-US"
-        if (!voice) {
-            if (!alertDisplayed) {
-                if (voices.length === 0) {
-                    alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used, which may cause problems.");
-                } else {
-                    alert("No 'en-US' voice found. Using default voice instead.");
-                }
-                alertDisplayed = true;
+        if (!voice && !alertDisplayed) {
+            if (voices.length === 0) {
+                alert("No 'en-US' voice found in your speech synthesizer. Please enable English language in your browser's speech synthesizer. For now, the default voice will be used, which may cause problems.");
+            } else {
+                alert("No 'en-US' voice found. Using default voice instead.");
             }
+            alertDisplayed = true; // Marca a mensagem como exibida
         }
 
         // Configura o texto para leitura
