--- a/Atividades/Mixed Letters FIXO/index.html
+++ b/Atividades/Mixed Letters FIXO/index.html
@@ -405,11 +405,26 @@ async function generatePDF() {
     wordContainer.appendChild(mixedLettersElement);
 
     const inputContainer = document.createElement('div');
-    shuffledWord.split('').forEach(() => {
+    const letterInputs = [];
+
+    shuffledWord.split('').forEach((_, index, array) => {
         const letterInput = document.createElement('input');
         letterInput.classList.add('letter-input');
         letterInput.maxLength = 1;
+
+        // Evento de input para mover o cursor automaticamente
+        letterInput.addEventListener('input', function() {
+            if (letterInput.value.length === 1) {
+                if (index < array.length - 1) {
+                    letterInputs[index + 1].focus(); // Vai para o próximo campo
+                } else {
+                    letterInput.blur(); // Remove o foco do último campo
+                }
+            }
+        });
+
         inputContainer.appendChild(letterInput);
+        letterInputs.push(letterInput);
     });
 
     wordContainer.appendChild(inputContainer);
