--- a/Atividades/Mixed Letters FIXO/index.html
+++ b/Atividades/Mixed Letters FIXO/index.html
@@ -321,6 +321,7 @@ async function generatePDF() {
     let activities = [];
     let completedWords = 0;
     let alertDisplayed = false; // Controle para exibir o alerta apenas uma vez
+    let selectedVoice = null; // Variável global para armazenar a voz selecionada
 
     // Função para embaralhar a palavra
     function shuffleWord(word) {
@@ -330,42 +331,60 @@ async function generatePDF() {
 
     function readText(text) {
     const synth = window.speechSynthesis;
-
-    // Cancela qualquer síntese de voz anterior
-    synth.cancel();
-
-    // Busca por vozes disponíveis
-    const voices = synth.getVoices();
-    let selectedVoice = voices.find(voice => voice.lang === "en-US");
+    synth.cancel(); // Cancela qualquer síntese de voz anterior
 
     if (!selectedVoice) {
-        if (voices.length === 0) {
-            // Se nenhuma voz estiver disponível, aguarda carregamento
-            synth.onvoiceschanged = () => {
-                const updatedVoices = synth.getVoices();
-                selectedVoice = updatedVoices.find(voice => voice.lang === "en-US");
+        const voices = synth.getVoices();
+        selectedVoice = voices.find(voice => voice.lang === "en-US");
 
-                if (!selectedVoice && !alertDisplayed) {
-                    alert("No 'en-US' voice found. Using default voice instead.");
-                    alertDisplayed = true;
-                }
+        if (!selectedVoice) {
+            if (voices.length === 0) {
+                synth.onvoiceschanged = () => {
+                    const updatedVoices = synth.getVoices();
+                    selectedVoice = updatedVoices.find(voice => voice.lang === "en-US");
 
-                const utterance = new SpeechSynthesisUtterance(text);
-                utterance.voice = selectedVoice || updatedVoices[0]; // Usa a primeira voz disponível como fallback
-                synth.speak(utterance);
-            };
-            return;
-        } else if (!alertDisplayed) {
-            // Se já houver vozes, mas nenhuma for "en-US", exibe alerta
-            alert("No 'en-US' voice found. Using default voice instead.");
-            alertDisplayed = true;
+                    if (!selectedVoice && !alertDisplayed) {
+                        alert("No 'en-US' voice found. Using default voice instead.");
+                        alertDisplayed = true;
+                    }
+
+                    const utterance = new SpeechSynthesisUtterance(text);
+                    utterance.voice = selectedVoice || updatedVoices[0]; // Fallback para a primeira voz disponível
+                    synth.speak(utterance);
+                };
+                return;
+            } else if (!alertDisplayed) {
+                alert("No 'en-US' voice found. Using default voice instead.");
+                alertDisplayed = true;
+            }
         }
     }
 
-    // Cria e fala o texto usando a voz selecionada
     const utterance = new SpeechSynthesisUtterance(text);
-    utterance.voice = selectedVoice || voices[0]; // Usa a primeira voz disponível como fallback
+    utterance.voice = selectedVoice || synth.getVoices()[0]; // Fallback para a primeira voz disponível
     synth.speak(utterance);
+}
+   
+function initializeVoices() {
+    const synth = window.speechSynthesis;
+    const voices = synth.getVoices();
+
+    selectedVoice = voices.find(voice => voice.lang === "en-US");
+
+    if (!selectedVoice) {
+        if (!alertDisplayed) {
+            alert("No 'en-US' voice found. Using default voice instead.");
+            alertDisplayed = true;
+        }
+        selectedVoice = voices[0]; // Usa a primeira voz disponível como fallback
+    }
+
+    console.log("Selected voice:", selectedVoice ? selectedVoice.name : "Default voice");
+}
+
+// Configura evento global apenas uma vez
+if (!window.speechSynthesis.onvoiceschanged) {
+    window.speechSynthesis.onvoiceschanged = initializeVoices;
 }
 
     // Função para capturar fase, level e unit do URL
@@ -416,7 +435,7 @@ async function generatePDF() {
 }
 
     // Função para carregar as atividades
-  async function loadActivities() {
+ async function loadActivities() {
     try {
         const { level, unit } = getLevelAndUnitFromURL();
 
@@ -438,11 +457,11 @@ async function generatePDF() {
 }
 
     // Função para criar uma atividade
-   function createActivity(imageUrl, word) {
+ function createActivity(imageUrl, word) {
     const activityContainer = document.getElementById('activity-container');
     const activityDiv = document.createElement('div');
     activityDiv.classList.add('activity');
-    activityDiv.dataset.completed = false; // Inicializa como não concluída
+    activityDiv.dataset.completed = "false"; // Inicializa como não concluída
 
     const imgElement = document.createElement('img');
     imgElement.src = imageUrl;
@@ -502,28 +521,27 @@ async function generatePDF() {
             .join('');
 
         const letterInputs = inputContainer.querySelectorAll('.letter-input');
-      if (userAnswer === word.toUpperCase()) {
-    letterInputs.forEach(input => {
-        input.classList.add('correct');
-        input.classList.remove('incorrect');
-    });
+        if (userAnswer === word.toUpperCase()) {
+            letterInputs.forEach(input => {
+                input.classList.add('correct');
+                input.classList.remove('incorrect');
+            });
 
-    // Lê a palavra correta usando o sintetizador de voz
-    readText(word);
+            // Lê a palavra correta usando o sintetizador de voz
+            readText(word);
 
-    if (activityDiv.dataset.completed === "false") {
-        completedWords++;
-        activityDiv.dataset.completed = "true"; // Marca como concluída
-        console.log(`User Answer: ${userAnswer}, Correct Answer: ${word}`);
-        console.log(`Completed Words: ${completedWords}/${activities.length}`);
-    }
+           if (activityDiv.dataset.completed === "false") {
+    completedWords++;
+    activityDiv.dataset.completed = "true"; // Marca como concluída
+                console.log(`User Answer: ${userAnswer}, Correct Answer: ${word}`);
+                console.log(`Completed Words: ${completedWords}/${activities.length}`);
+            }
 
-    if (completedWords === activities.length) {
-        console.log("All activities completed!");
-        showCompletionModal(); // Exibe o modal de conclusão
-        ensureUserIsAuthenticated(updateNextPhase); // Atualiza a próxima fase no Firebase
-    }
-}
+            if (completedWords === activities.length) {
+                console.log("All activities completed!");
+                showCompletionModal(); // Exibe o modal de conclusão
+                ensureUserIsAuthenticated(updateNextPhase); // Atualiza a próxima fase no Firebase
+            }
         } else {
             letterInputs.forEach(input => {
                 input.classList.add('incorrect');
@@ -550,7 +568,10 @@ async function generatePDF() {
         document.getElementById('completion-modal').style.display = 'none';
     }
 
-    document.addEventListener('DOMContentLoaded', loadActivities);
+  document.addEventListener('DOMContentLoaded', () => {
+    initializeVoices(); // Inicializa as vozes disponíveis
+    loadActivities(); // Carrega as atividades
+});
 </script>
 
 </body>
