--- a/Atividades/Mixed Letters FIXO/index.html
+++ b/Atividades/Mixed Letters FIXO/index.html
@@ -329,11 +329,12 @@ async function generatePDF() {
         return shuffled !== word ? shuffled : shuffleWord(word);
     }
 
-    function readText(text) {
+   function readText(text) {
     const synth = window.speechSynthesis;
     synth.cancel(); // Cancela qualquer síntese de voz anterior
 
-    if (!selectedVoice) {
+    // Garante que as vozes estão carregadas antes de tentar selecionar uma
+    if (!selectedVoice || synth.getVoices().length === 0) {
         const voices = synth.getVoices();
         selectedVoice = voices.find(voice => voice.lang === "en-US");
 
@@ -360,6 +361,7 @@ async function generatePDF() {
         }
     }
 
+    // Cria e fala o texto usando a voz selecionada
     const utterance = new SpeechSynthesisUtterance(text);
     utterance.voice = selectedVoice || synth.getVoices()[0]; // Fallback para a primeira voz disponível
     synth.speak(utterance);
