--- a/Atividades/Mixed Letters FIXO/index.html
+++ b/Atividades/Mixed Letters FIXO/index.html
@@ -329,18 +329,20 @@ async function generatePDF() {
         return shuffled !== word ? shuffled : shuffleWord(word);
     }
 
- function readText(text) {
+function readText(text) {
     const synth = window.speechSynthesis;
     synth.cancel(); // Cancela qualquer síntese de voz anterior
 
     if (!selectedVoice) {
         const voices = synth.getVoices();
+        console.log("Available voices:", voices); // Loga as vozes disponíveis
         selectedVoice = voices.find(voice => voice.lang === "en-US");
 
         if (!selectedVoice) {
             if (voices.length === 0) {
                 synth.onvoiceschanged = () => {
                     const updatedVoices = synth.getVoices();
+                    console.log("Updated voices:", updatedVoices); // Loga vozes após a mudança
                     selectedVoice = updatedVoices.find(voice => voice.lang === "en-US");
 
                     if (!selectedVoice && !alertDisplayed) {
