--- a/Atividades/Mixed Letters FIXO/index.html
+++ b/Atividades/Mixed Letters FIXO/index.html
@@ -432,24 +432,27 @@ function initializeVoices() {
 }
 
     // Função para carregar as atividades
- async function loadActivities() {
+async function loadActivities() {
     try {
         const { level, unit } = getLevelAndUnitFromURL();
 
         const wordsPath = `../../${level}/${unit}/data1/words.txt`;
+        console.log("Attempting to load words from:", wordsPath);
         const response = await fetch(wordsPath);
+        if (!response.ok) throw new Error(`Failed to fetch words. Status: ${response.status}`);
         const text = await response.text();
         const words = text.trim().split('\n');
 
         words.forEach((word, index) => {
             const imageUrl = `../../${level}/${unit}/data1/imagens/imagem${index + 1}.png`;
+            console.log("Attempting to load image:", imageUrl);
             activities.push(word); // Adiciona cada palavra ao array activities
             createActivity(imageUrl, word);
         });
 
-        console.log("Activities Loaded:", activities); // Log para depuração
+        console.log("Activities Loaded Successfully:", activities);
     } catch (error) {
-        console.error('Erro ao carregar palavras ou imagens:', error);
+        console.error('Error loading words or images:', error.message);
     }
 }
 
