--- a/Atividades/Mixed Letters FIXO/index.html
+++ b/Atividades/Mixed Letters FIXO/index.html
@@ -209,7 +209,7 @@ document.getElementById('backButton').addEventListener('click', async function (
     }
 
     const userId = user.uid;
-    const progressRef = firebase.database().ref(usuarios/${userId}/progresso/${level}/${unit}/fase${nextPhase});
+    const progressRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}/fase${nextPhase}`);
 
     try {
         // Verifica se a próxima fase está desbloqueada
@@ -234,7 +234,7 @@ document.getElementById('backButton').addEventListener('click', async function (
 firebase.auth().onAuthStateChanged((user) => {
     if (user) {
         const userId = user.uid;
-        const userRoleRef = firebase.database().ref(usuarios/${userId}/role);
+        const userRoleRef = firebase.database().ref(`usuarios/${userId}/role`);
 
         userRoleRef.once('value').then((snapshot) => {
             const role = snapshot.val();
@@ -299,7 +299,7 @@ async function generatePDF() {
                 if (mixedLettersElement) {
                     const mixedLetters = Array.from(mixedLettersElement.children).map(el => el.innerText).join(' ');
                     yOffset += 10;
-                    doc.text(Letters (mixed): ${mixedLetters}, 50, yOffset + 10);
+                    doc.text(`Letters (mixed): ${mixedLetters}`, 50, yOffset + 10);
                 }
 
                 yOffset += 40;
@@ -329,18 +329,20 @@ async function generatePDF() {
         return shuffled !== word ? shuffled : shuffleWord(word);
     }
 
-    function readText(text) {
+function readText(text) {
     const synth = window.speechSynthesis;
     synth.cancel(); // Cancela qualquer síntese de voz anterior
 
     if (!selectedVoice) {
         const voices = synth.getVoices();
+        console.log("Available voices:", voices); // Loga as vozes disponíveis
         selectedVoice = voices.find(voice => voice.lang === "en-US");
 
         if (!selectedVoice) {
             if (voices.length === 0) {
                 synth.onvoiceschanged = () => {
                     const updatedVoices = synth.getVoices();
+                    console.log("Updated voices:", updatedVoices); // Loga vozes após a mudança
                     selectedVoice = updatedVoices.find(voice => voice.lang === "en-US");
 
                     if (!selectedVoice && !alertDisplayed) {
@@ -382,11 +384,6 @@ function initializeVoices() {
     console.log("Selected voice:", selectedVoice ? selectedVoice.name : "Default voice");
 }
 
-// Configura evento global apenas uma vez
-if (!window.speechSynthesis.onvoiceschanged) {
-    window.speechSynthesis.onvoiceschanged = initializeVoices;
-}
-
     // Função para capturar fase, level e unit do URL
     function getPhaseFromURL() {
         const params = new URLSearchParams(window.location.search);
@@ -416,18 +413,18 @@ if (!window.speechSynthesis.onvoiceschanged) {
     console.log("Updating next phase...");
     const currentPhase = getPhaseFromURL();
     const { level, unit } = getLevelAndUnitFromURL();
-    const dbRef = firebase.database().ref(usuarios/${userId}/progresso/${level}/${unit});
+    const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
     try {
         if (currentPhase === "last") {
-            const nextUnit = Unit${parseInt(unit.replace('Unit', '')) + 1};
-            await firebase.database().ref(usuarios/${userId}/progresso/${level}/${nextUnit}).set({ fase1: true });
+            const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
+            await firebase.database().ref(`usuarios/${userId}/progresso/${level}/${nextUnit}`).set({ fase1: true });
         } else if (currentPhase === "end") {
-            const nextLevel = Level${parseInt(level.replace('Level', '')) + 1};
-            await firebase.database().ref(usuarios/${userId}/progresso/${nextLevel}/Unit1).set({ fase1: true });
+            const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
+            await firebase.database().ref(`usuarios/${userId}/progresso/${nextLevel}/Unit1`).set({ fase1: true });
         } else {
             const nextPhase = parseInt(currentPhase) + 1;
-            await dbRef.update({ [fase${currentPhase}]: true, [fase${nextPhase}]: true });
+            await dbRef.update({ [`fase${currentPhase}`]: true, [`fase${nextPhase}`]: true });
         }
     } catch (error) {
         console.error("Erro ao atualizar o progresso da fase:", error);
@@ -435,24 +432,27 @@ if (!window.speechSynthesis.onvoiceschanged) {
 }
 
     // Função para carregar as atividades
- async function loadActivities() {
+async function loadActivities() {
     try {
         const { level, unit } = getLevelAndUnitFromURL();
 
-        const wordsPath = ../../${level}/${unit}/data1/words.txt;
+        const wordsPath = `../../${level}/${unit}/data1/words.txt`;
+        console.log("Attempting to load words from:", wordsPath);
         const response = await fetch(wordsPath);
+        if (!response.ok) throw new Error(`Failed to fetch words. Status: ${response.status}`);
         const text = await response.text();
         const words = text.trim().split('\n');
 
         words.forEach((word, index) => {
-            const imageUrl = ../../${level}/${unit}/data1/imagens/imagem${index + 1}.png;
+            const imageUrl = `../../${level}/${unit}/data1/imagens/imagem${index + 1}.png`;
+            console.log("Attempting to load image:", imageUrl);
             activities.push(word); // Adiciona cada palavra ao array activities
             createActivity(imageUrl, word);
         });
 
-        console.log("Activities Loaded:", activities); // Log para depuração
+        console.log("Activities Loaded Successfully:", activities);
     } catch (error) {
-        console.error('Erro ao carregar palavras ou imagens:', error);
+        console.error('Error loading words or images:', error.message);
     }
 }
 
@@ -467,7 +467,7 @@ if (!window.speechSynthesis.onvoiceschanged) {
     imgElement.src = imageUrl;
 
     imgElement.onerror = function() {
-        console.warn(Erro ao carregar a imagem: ${imageUrl});
+        console.warn(`Erro ao carregar a imagem: ${imageUrl}`);
         imgElement.style.display = 'none'; // Esconde a imagem se não carregar
     };
 
@@ -533,8 +533,8 @@ if (!window.speechSynthesis.onvoiceschanged) {
            if (activityDiv.dataset.completed === "false") {
     completedWords++;
     activityDiv.dataset.completed = "true"; // Marca como concluída
-                console.log(User Answer: ${userAnswer}, Correct Answer: ${word});
-                console.log(Completed Words: ${completedWords}/${activities.length});
+                console.log(`User Answer: ${userAnswer}, Correct Answer: ${word}`);
+                console.log(`Completed Words: ${completedWords}/${activities.length}`);
             }
 
             if (completedWords === activities.length) {
@@ -566,12 +566,7 @@ if (!window.speechSynthesis.onvoiceschanged) {
     function closeModal() {
         document.getElementById('overlay').style.display = 'none';
         document.getElementById('completion-modal').style.display = 'none';
-    }
-
-  document.addEventListener('DOMContentLoaded', () => {
-    initializeVoices(); // Inicializa as vozes disponíveis
-    loadActivities(); // Carrega as atividades
-});
+    }  
 </script>
 
 </body>
