--- a/Atividades/Mixed Letters FIXO/index.html
+++ b/Atividades/Mixed Letters FIXO/index.html
@@ -308,7 +308,7 @@ async function generatePDF() {
                 if (mixedLettersElement) {
                     const mixedLetters = Array.from(mixedLettersElement.children).map(el => el.innerText).join(' ');
                     yOffset += 10;
-                    doc.text(Letters (mixed): ${mixedLetters}, 50, yOffset + 10);
+                    doc.text(`Letters (mixed): ${mixedLetters}`, 50, yOffset + 10);
                 }
 
                 yOffset += 40;
@@ -428,14 +428,14 @@ if (!window.speechSynthesis.onvoiceschanged) {
     console.log("Updating next phase...");
     const currentPhase = getPhaseFromURL();
     const { level, unit } = getLevelAndUnitFromURL();
-    const dbRef = firebase.database().ref(usuarios/${userId}/progresso/${level}/${unit});
+    const dbRef = firebase.database().ref(`usuarios/${userId}/progresso/${level}/${unit}`);
 
     try {
         if (currentPhase === "last") {
-            const nextUnit = Unit${parseInt(unit.replace('Unit', '')) + 1};
+            const nextUnit = `Unit${parseInt(unit.replace('Unit', '')) + 1}`;
             await firebase.database().ref(usuarios/${userId}/progresso/${level}/${nextUnit}).set({ fase1: true });
         } else if (currentPhase === "end") {
-            const nextLevel = Level${parseInt(level.replace('Level', '')) + 1};
+          const nextLevel = `Level${parseInt(level.replace('Level', '')) + 1}`;
             await firebase.database().ref(usuarios/${userId}/progresso/${nextLevel}/Unit1).set({ fase1: true });
         } else {
             const nextPhase = parseInt(currentPhase) + 1;
@@ -463,7 +463,7 @@ async function loadActivities() {
         console.log("Palavras carregadas:", words);
 
         words.forEach((word, index) => {
-            const imageUrl = `../../${level}/${unit}/data1/imagens/imagem${index + 1}.png`;
+           const imageUrl = `../../${level}/${unit}/data1/imagens/imagem${index + 1}.png`;
             console.log(`Tentando carregar imagem para a palavra '${word}':`, imageUrl);
             activities.push(word);
             createActivity(imageUrl, word);
